添加一个Selenium单元测试基类.